# project_oracle

./: .gitignore  CMakeLists.txt  README.md  brainstorm.md  main.cpp
graphics/: link_spritesheet.h  proj_title.xcf  title_background.xcf  title_button.xcf
graphics/tilemaps/: HV.tsx  HV_Spring.tmx  HV_Spring2.tmx  Link.tsx  horon village spring.tmx
graphics/tilesets/: horon village.xcf  horon_village.tsx  oos.tsx  oos2.tsx
include/: Button.hpp  GameManager.hpp  Level.hpp  Rendering.hpp  globals.hpp
src/: Button.cpp  GameManager.cpp  Level.cpp  StartGame.cpp  StartGame.hpp  main.cpp
